2005-12-03  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_info.test: Add new sub-commands to failing ns_info test.

2005-11-12  Vlad Seryakov  <seryakov@users.sf.net>
	
	* nsd.info.c: Added ns_info started and 
	ns_info shutdownpending commands

2005-11-12  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd.conn.c: New Ns_ConnSockPtr function
	* nsd/info.c: Fixed sockcallbacks as unrecognosed error
	* nssock/nssock.c:
	* include/ns.h: Added new DriverAccept call for drivers
	to be called after accept the connection. If request struct will 
	be provided by the driver, connection will be queued immediately and
	driver will handle it completely. This is temporary until more generic
	driver support will be designed.
	* nsd/sock.c: Moved and made as public two functions from sock 
	driver: Ns_SockRecvBufs, Ns_SockSendBufs. for new drivers, now it 
	will be easy to re-use send/recv data from within driver's proc.

	* nsd/driver.c: Split SockRead into SockRead and SockParse,
	added new Ns_DriverSetRequest function that allocates request 
	struct for new connection socket.

2005-11-07  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/info.c: Fixed broken NsTclInfoObjCmd which failed to
	properly process info options not tied to any specific server.

2005-11-06  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/Makefile:
	* nsd/url2file.c:
	* nsd/fastpath.c:
	* nsd/info.c:
	* nsd/init.c:
	* nsd/proc.c:
	* nsd/server.c:
	* nsd/tclcmds.c:
	* nsd/tclfile.c:
	* tests/ns_info.test:
	* tests/url2file.test: Add new, flexible urlspace-based Url2File C
	API and matching Tcl commands. (RFE: 1333811)

2005-11-02  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/binder.c: All Ns_SockListen routines support
	forked binder now if direct socket allocation failed

2005-11-02  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/ns_info.test: added 1 second delay to make ns_info 
	uptime report uptime > 0 successfuly

	* configure.in:
	* m4/cmmsg.m4: